Fixing the background-color on mobile devices

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -104,6 +104,7 @@ section {
 
 body {
   line-height: 1;
+  background-color: rgb(139 0, 0);
   font-family: var(--font-dm-sans);
 }
 
